SFDC Automation/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Finance_Count__c</fullName>
        <label>Finance Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Financing__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <label>Line Item Total</label>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Approval_Level__c</fullName>
        <label>Max Approval Level</label>
        <summarizedField>QuoteLineItem.Approval_Level__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Approver__c</fullName>
        <formula>IF(CONTAINS( $Setup.UVS_Approval_Setting__c.Role_Names__c,$UserRole.Name),
(
IF(Max_Approval_Level__c == 1, &apos;DAM&apos;, 
  IF(Max_Approval_Level__c == 2, &apos;VP AM&apos;, 
    IF(Max_Approval_Level__c == 3, &apos;SVP AM&apos;, &apos;&apos;)
  )
))
,

(
IF(Max_Approval_Level__c == 1, &apos;FAM&apos;, 
  IF(Max_Approval_Level__c == 2, &apos;DAM&apos;, 
    IF(Max_Approval_Level__c == 3, &apos;VP AM&apos;, &apos;&apos;)
  )
))


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>This formula field points to the Opportunity Number in the opportunity field.</description>
        <formula>Opportunity.ext_pipeline_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Comments__c</fullName>
        <label>BTR Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Image1__c</fullName>
        <label>Selected Image1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Image2__c</fullName>
        <label>Selected Image2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Image3__c</fullName>
        <label>Selected Image3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTC_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Ryder Branch in order to know the location</description>
        <inlineHelpText>Look up to Ryder Branch in order to know the location</inlineHelpText>
        <label>UTC Assigned</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UTC__c</fullName>
        <formula>$User.UTC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UTC</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>UVS</fullName>
        <active>true</active>
        <description>Used vehicle Sales</description>
        <label>UVS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>